--- a/Services.Api/appsettings.json
+++ b/Services.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SERVICE_CONNECTIONSTRING": "host=localhost;port=1433;Database=Services;Trust Server Certificate=True,timeout=0"
+  }
 }
