--- a/Services.Api/appsettings.json
+++ b/Services.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SERVICE_CONNECTIONSTRING": "host=localhost;port=1433;Database=Services;Trust Server Certificate=True,timeout=0"
+    "SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true"
   }
 }
