--- a/Services.Api/appsettings.json
+++ b/Services.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true"
+  },
+  "Email": {
+    "gmail": "aymanroshdy909@gmail.com",
+    "password": "ldjueekzgfuqrhsa",
+    "Port": 465,
+    "Host": "smtp.gmail.com"
   }
 }
