--- a/Services.Api/Services.Api.csproj
+++ b/Services.Api/Services.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -22,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Services.Application\Services.Application.csproj" />
     <ProjectReference Include="..\Services.Persistence\Services.Persistence.csproj" />
   </ItemGroup>
 
