--- a/Services.Application/Services.Application.csproj
+++ b/Services.Application/Services.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Services\" />
     <Folder Include="Features\Users\Queries\GetAll\" />
   </ItemGroup>
 
