--- a/Services.Application/Services.Application.csproj
+++ b/Services.Application/Services.Application.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Services\" />
+    <Folder Include="Features\Services\Commands\Delete\" />
+    <Folder Include="Features\Services\Commands\Update\" />
+    <Folder Include="Features\Services\Queries\" />
     <Folder Include="Features\Users\Queries\GetAll\" />
   </ItemGroup>
 
