--- a/Services.Api/Properties/launchSettings.json
+++ b/Services.Api/Properties/launchSettings.json
@@ -17,7 +17,22 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7290;http://localhost:5277"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   },
-  "$schema": "https://json.schemastore.org/launchsettings.json"
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:49219/",
+      "sslPort": 44355
+    }
+  }
 }
