--- a/Services.Api/appsettings.json
+++ b/Services.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-   "SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true",
-  //  "SERVICE_CONNECTIONSTRING": "Server=db13496.public.databaseasp.net; Database=db13496; User Id=db13496; Password=y@2P8L#mZx4=; Encrypt=False; MultipleActiveResultSets=True;"
+   //"SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true",
+   "SERVICE_CONNECTIONSTRING": "Server=db13496.public.databaseasp.net; Database=db13496; User Id=db13496; Password=y@2P8L#mZx4=; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "Email": {
     "gmail": "aymanroshdy909@gmail.com",
