--- a/Services.Application/Services.Application.csproj
+++ b/Services.Application/Services.Application.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Customers\Commands\" />
+    <Folder Include="Features\Customers\Queries\" />
     <Folder Include="Features\Users\Queries\GetAll\" />
   </ItemGroup>
 
