--- a/Services.Api/appsettings.json
+++ b/Services.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true",
-    //"SERVICE_CONNECTIONSTRING": "Server=db14334.public.databaseasp.net; Database=db14334; User Id=db14334; Password=4m%W_Be27#Ky; Encrypt=False; MultipleActiveResultSets=True;"
+    //"SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true",
+    "SERVICE_CONNECTIONSTRING": "Server=db14953.public.databaseasp.net; Database=db14953; User Id=db14953; Password=Jy8!r_H2=S9e; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "Email": {
     "gmail": "aymanroshdy909@gmail.com",
