--- a/Services.Api/Services.Api.csproj
+++ b/Services.Api/Services.Api.csproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="..\Services.Persistence\Services.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
