--- a/Services.Api/appsettings.json
+++ b/Services.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true",
+    "SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true"
     //"SERVICE_CONNECTIONSTRING": "Server=db15160.public.databaseasp.net; Database=db15160; User Id=db15160; Password=4i_WgX5+D#j6; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "Email": {
@@ -15,5 +15,11 @@
     "password": "ldjueekzgfuqrhsa",
     "Port": 465,
     "Host": "smtp.gmail.com"
+  },
+  "Admin": {
+    "gmail": "aymanroshdy909@gmail.com",
+    "password": "652003",
+    "phone": "+201040250780",
+    "name": "Ayman Roshdy"
   }
 }
