--- a/Services.Api/appsettings.json
+++ b/Services.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true"
-    //"SERVICE_CONNECTIONSTRING": "Server=db15160.public.databaseasp.net; Database=db15160; User Id=db15160; Password=4i_WgX5+D#j6; Encrypt=False; MultipleActiveResultSets=True;"
+    "SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true",
+    //"SERVICE_CONNECTIONSTRING": "Server=db18227.public.databaseasp.net; Database=db18227; User Id=db18227; Password=Ff5@+Md9Ct2-; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "Email": {
     "gmail": "aymanroshdy909@gmail.com",
