--- a/Services.Api/appsettings.json
+++ b/Services.Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"SERVICE_CONNECTIONSTRING": "Data Source=.;Integrated Security=True;Initial Catalog=Services;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False; MultipleActiveResultSets=true",
-    "SERVICE_CONNECTIONSTRING": "Server=db18227.public.databaseasp.net; Database=db18227; User Id=db18227; Password=Ff5@+Md9Ct2-; Encrypt=False; MultipleActiveResultSets=True;"
+    "SERVICE_CONNECTIONSTRING": "Server=db19334.public.databaseasp.net; Database=db19334; User Id=db19334; Password=Wd5%2A?zj@8X; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "Email": {
     "gmail": "aymanroshdy909@gmail.com",
