--- a/Services.Application/Services.Application.csproj
+++ b/Services.Application/Services.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="Features\Bookings\Command\Delete\" />
     <Folder Include="Features\Bookings\Command\Update\" />
+    <Folder Include="Features\Bookings\Query\" />
     <Folder Include="Features\Customers\Commands\" />
     <Folder Include="Features\Users\Queries\GetAll\" />
   </ItemGroup>
